--- a/driver/unittests/build.xml
+++ b/driver/unittests/build.xml
@@ -67,10 +67,11 @@
         <mkdir dir="${driver.ut.report.dir}"/>
         <junit jvm="${java.exec}" printsummary="yes" haltonfailure="yes">
             <classpath path="${driver.ut.classes.dir}" />
+            <classpath path="${driver.dep}" />
+            <classpath path="${omni.xcodeml-common.dep}" />
             <classpath path="${junit.dep}" />
             <classpath path="${hamcrest.dep}" />
             <classpath path="${antlr4.runtime.dep}" />
-            <classpath path="${driver.dep}" />
             <classpath path="${jaxb-runtime.dep}" />
             <classpath path="${jaxb-core.dep}" />
             <classpath path="${jakarta.xml.bind-api.dep}" />
