--- a/driver/etc/clawfc.properties.in
+++ b/driver/etc/clawfc.properties.in
@@ -46,7 +46,7 @@ JAR1="${JAR1}:${OMNI_JAR_C_BACKEND}:${CLAW_X2T_TATSU_JAR}"
 JAR1="${JAR1}:${CLAW_X2T_SHENRON_JAR}:${CLAW_X2T_WANI_JAR}:${COMMON_CLI}"
 JAR1="${JAR1}:${ANTLR4}:${ANTLR4_RUNTIME}:${TOML}"
 
-OMNI_FX2X_MUST_OPT="-cp ${JAR1} claw.ClawX2T"
+OMNI_FX2X_MUST_OPT="-cp ${JAR1} claw.wani.ClawX2T"
 OMNI_FX2X_OPT="@JAVA_OPT@ ${OMNI_FX2X_MUST_OPT} @OMNI_X2X_FLAGS@"
 
 # Driver
