--- a/driver/etc/claw_f.conf.in
+++ b/driver/etc/claw_f.conf.in
@@ -49,7 +49,7 @@ JAR1="${JAR1}:${OMNI_JAR_C_BACKEND}:${CLAW_X2T_TATSU_JAR}"
 JAR1="${JAR1}:${CLAW_X2T_SHENRON_JAR}:${CLAW_X2T_WANI_JAR}:${COMMON_CLI}"
 JAR1="${JAR1}:${ANTLR4}:${ANTLR4_RUNTIME}:${TOML}"
 
-readonly OMNI_FX2X_MUST_OPT="-cp ${JAR1} claw.ClawX2T"
+readonly OMNI_FX2X_MUST_OPT="-cp ${JAR1} claw.wani.ClawX2T"
 readonly OMNI_FX2X_OPT="@JAVA_OPT@ ${OMNI_FX2X_MUST_OPT} @OMNI_X2X_FLAGS@"
 
 # Driver
